# qrqcrew-notes-daemon

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
config/: config.example.toml
docs/plans/: 2026-01-01-multi-org-implementation.md  2026-01-01-multi-org-support-design.md  2026-01-03-skcc-support-design.md
src/: config.rs  csv_fetcher.rs  github.rs  html_fetcher.rs  lib.rs  main.rs  nickname_cache.rs  notes_generator.rs  qrz.rs
