[package]
name = "qrqcrew-notes-daemon"
version = "0.6.0"
edition = "2024"
description = "Daemon to generate Ham2K PoLo callsign notes from QRQ Crew roster"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# CSV parsing
csv = "1.3"

# Configuration
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# GitHub API
octocrab = "0.41"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Regex for callsign validation
regex = "1"

# HTML scraping (for SKCC)
scraper = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3"
